name:                nqe
version:             0.1.0.0
synopsis:            Concurrency library following Erlang/OTP
-- description:
homepage:            https://github.com/xenog/nqe#readme
license:             BSD3
license-file:        LICENSE
author:              Jean-Pierre Rupp
maintainer:          xenog@protonmail.com
copyright:           (c) 2017 Jean-Pierre Rupp
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.NQE
  other-modules:       Control.Concurrent.NQE.Process
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2 && < 2.3
                     , stm >= 2.4 && < 3
  default-language:    Haskell2010

test-suite nqe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nqe
                     , hspec >= 2.4 && < 3
                     , mtl >= 2.2 && < 2.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xenog/nqe
